# DAGr

./: .gitignore  LICENSE  README.md  TESTING.md  pyproject.toml
information/: Constrained_vs_Unconstrained_Schedules.md
src/dagr/: __init__.py  cli.py  mcp_server.py  models.py  persistence.py  scheduler.py
tests/: test_cli.py  test_models.py  test_scheduler.py
