[project]
name = "dagr"
version = "0.1.0"
description = "Thesis timeline optimizer using DAG-based scheduling"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "networkx>=3.4",
    "pandas>=2.2",
    "typer>=0.15",
]

[project.scripts]
dagr = "dagr.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dagr"]
